[project]
name = "color-doppler-volume-sample-extractor"
version = "0.2.0"
description = "Volume Sample extractor for Color Doppler ultrasound data using an U-Net neural network architecture."
readme = "README.md"
authors = [
    { name = "serchugar", email = "162186871+serchugar@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = ["python-dotenv>=1.2.2"]

[project.urls]
Homepage = "https://github.com/serchugar/color-doppler-volume-sample-extractor"
Issues = "https://github.com/serchugar/color-doppler-volume-sample-extractor/issues"

[project.optional-dependencies]
cpu = ["torch>=2.11.0", "torchvision>=0.26.0", "opencv-contrib-python"]
cuda = ["torch>=2.11.0", "torchvision>=0.26.0", "opencv-contrib-python"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", extra = "cuda" }]
torchvision = [{ index = "pytorch-cu130", extra = "cuda" }]
opencv-contrib-python = [
    { url = "https://github.com/cudawarped/opencv-python-cuda-wheels/releases/download/4.13.0.90/opencv_contrib_python-4.13.0.90-cp37-abi3-win_amd64.whl", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = ["ruff>=0.15.7"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors (PEP 8 violations)
    "W",   # pycodestyle warnings (style issues)
    "F",   # Pyflakes (logic errors and unused variables)
    "I",   # isort (import sorting and grouping)
    "N",   # pep8-naming (naming convention compliance)
    "UP",  # pyupgrade (modernize Python syntax)
    "B",   # flake8-bugbear (common design flaws/bugs)
    "C4",  # flake8-comprehensions (optimized list/dict/set usage)
    "A",   # flake8-builtins (prevent shadowing Python built-ins)
    "ANN", # flake8-annotations (type hint enforcement)
    "PTH", # flake8-use-pathlib (prefer Pathlib over os.path)
    "ARG", # flake8-unused-arguments (detect unused function inputs)
    "SIM", # flake8-simplify (suggest code simplifications)
]
ignore = [
    "ANN401", # Allow 'Any' for complex types (useful in deep learning)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dv_extractor"]
