[project]
name = "color-doppler-volume-sample-extractor"
version = "0.2.0"
description = "Volume Sample extractor for Color Doppler ultrasound data using an U-Net neural network architecture."
readme = "README.md"
authors = [
    { name = "serchugar", email = "162186871+serchugar@users.noreply.github.com" },
]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fiftyone>=1.14.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.66.5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

keywords = [
    "deep-learning",
    "neural-network",
    "u-net",
    "segmentation",
    "image-segmentation",
    "semantic-segmentation",
    "medical-imaging",
    "ultrasound",
    "color-doppler",
    "pytorch",
    "computer-vision",
    "machine-learning",
    "artificial-intelligence",
    "gpu-acceleration",
    "cuda",
    "volumetric",
    "medical-image-analysis",
    "color-doppler-ultrasound",
    "color-doppler-volume",
]

classifiers = [
    "Development Status :: 4 - Beta",

    "Environment :: GPU :: NVIDIA CUDA :: 13",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",

    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/serchugar/color-doppler-volume-sample-extractor"
Issues = "https://github.com/serchugar/color-doppler-volume-sample-extractor/issues"
Repository = "https://github.com/serchugar/color-doppler-volume-sample-extractor"
Documentation = "https://github.com/serchugar/color-doppler-volume-sample-extractor#readme"
Changelog = "https://github.com/serchugar/color-doppler-volume-sample-extractor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
cuda = ["torch", "torchvision"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", extra = "cuda" }]
torchvision = [{ index = "pytorch-cu130", extra = "cuda" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = ["ruff>=0.15.7", "vermin>=1.8.0"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors (PEP 8 violations)
    "W",   # pycodestyle warnings (style issues)
    "F",   # Pyflakes (logic errors and unused variables)
    "I",   # isort (import sorting and grouping)
    "N",   # pep8-naming (naming convention compliance)
    "UP",  # pyupgrade (modernize Python syntax)
    "B",   # flake8-bugbear (common design flaws/bugs)
    "C4",  # flake8-comprehensions (optimized list/dict/set usage)
    "A",   # flake8-builtins (prevent shadowing Python built-ins)
    "ANN", # flake8-annotations (type hint enforcement)
    "PTH", # flake8-use-pathlib (prefer Pathlib over os.path)
    "ARG", # flake8-unused-arguments (detect unused function inputs)
    "SIM", # flake8-simplify (suggest code simplifications)
]
ignore = [
    "ANN401", # Allow 'Any' for complex types (useful in deep learning)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dv_extractor"]
